Revision for #wms-14359, alignment issue for the arrow icons within the timepicker popup.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -3983,6 +3983,9 @@ If the height and width are not specified the video takes the height of the post
         .btn.btn-link {
            padding-left: 15px;
            padding-right: 15px;
+           span {
+             display: inline-block !important;
+           }
         }
       }
       tr {
